Fix flex justifiying and add gap.

--- a/src/panels/Menu.css
+++ b/src/panels/Menu.css
@@ -58,9 +58,8 @@ html {
 .position-list_desktop {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
-  align-content: space-between;
   padding: 8px 16px;
+  gap: 21px;
 }
 
 .position-desktop {
